# pdpexam_modul7

./: .gitignore  exam.txt  manage.py  pyproject.toml
Exam_modul7/: asgi.py  settings.py  urls.py  wsgi.py
apps/: admin.py  filters.py  models.py  mytests.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_article_category_product.py
